add user authentication api and implement json web token
